Fix window jumping

--- a/src/assets/styles/block/_content.scss
+++ b/src/assets/styles/block/_content.scss
@@ -4,6 +4,7 @@
 
   &__main {
     flex: 1 1 584px;
+    min-height: 806px;
   }
   &__aside {
     margin: 0 0 0 30px;
